Added nav bar to airlines file

--- a/Airlines/airlines.html
+++ b/Airlines/airlines.html
@@ -6,6 +6,12 @@
     <title>Manage Airlines</title>
 </head>
 <body>
+    <nav> 
+        <a href="index.html"> Airline Ticket System </a>
+        <a href="/Airlines/airlines.html"> Manage Airlines </a>
+        <a href="/destinations.html"> Manage destinations</a>
+        <a href="/book-ticket.html"> Book a Ticket</a>
+    </nav>
     <h3>Manage Airlines</h3>
     <form>
         <label for="airlineName">Arline name</label>
