Added nav bar to airlines file

--- a/Airlines/index.html
+++ b/Airlines/index.html
@@ -6,10 +6,9 @@
     <title>Airline Ticket System</title>
 </head>
 <body>
-
     <nav> 
         <a href="index.html"> Airline Ticket System </a>
-        <a href="/airlines.html"> Manage Airlines </a>
+        <a href="/Airlines/airlines.html"> Manage Airlines </a>
         <a href="/destinations.html"> Manage destinations</a>
         <a href="/book-ticket.html"> Book a Ticket</a>
     </nav>
