Added the destinatons file

--- a/Airlines/airlines.html
+++ b/Airlines/airlines.html
@@ -9,7 +9,7 @@
     <nav> 
         <a href="index.html"> Airline Ticket System </a>
         <a href="/Airlines/airlines.html"> Manage Airlines </a>
-        <a href="/destinations.html"> Manage destinations</a>
+        <a href="./destinations.html"> Manage destinations</a>
         <a href="/book-ticket.html"> Book a Ticket</a>
     </nav>
     <h3>Manage Airlines</h3>
