--- a/Airlines/destinations.html
+++ b/Airlines/destinations.html
@@ -11,7 +11,7 @@
       <a href="./index.html"> Airline Ticket System </a>
       <a href="./airlines.html"> Manage Airlines </a>
       <a href="./destinations.html"> Manage destinations</a>
-      <a href="/book-ticket.html"> Book a Ticket</a>
+      <a href="./ticket.html"> Book a Ticket</a>
     </nav>
 
     <div id="Destinations">
