--- a/Airlines/index.html
+++ b/Airlines/index.html
@@ -10,7 +10,7 @@
         <a href="index.html"> Airline Ticket System </a>
         <a href="/Airlines/airlines.html"> Manage Airlines </a>
         <a href="./destinations.html"> Manage destinations</a>
-        <a href="/book-ticket.html"> Book a Ticket</a>
+        <a href="./ticket.html"> Book a Ticket</a>
     </nav>
     <div> 
         <h1>Welcome to the Airline Ticket System </h1>
