--- a/Airlines/airlines.html
+++ b/Airlines/airlines.html
@@ -8,7 +8,7 @@
 <body>
     <nav> 
         <a href="index.html"> Airline Ticket System </a>
-        <a href="/Airlines/airlines.html"> Manage Airlines </a>
+        <a href="./airlines.html"> Manage Airlines </a>
         <a href="./destinations.html"> Manage destinations</a>
         <a href="./ticket.html"> Book a Ticket</a>
     </nav>
