--- a/Airlines/ticket.html
+++ b/Airlines/ticket.html
@@ -6,11 +6,11 @@
     <title>Book a ticket</title>
 </head>
 <body>
-    <nav>
-        <a href="./index.html">Airline Ticket System</a>
-        <a href="./airlines.html">Manage Airlines </a>
-        <a href="./destinations.html">Manage Destinations</a>
-        <a href="./ticket.html">Book a Ticket</a>
+    <nav> 
+        <a href="index.html"> Airline Ticket System </a>
+        <a href="./airlines.html"> Manage Airlines </a>
+        <a href="./destinations.html"> Manage destinations</a>
+        <a href="/book-ticket.html"> Book a Ticket</a>
     </nav>
     <h2>Book a Ticket</h2>
     <form>
