--- a/Airlines/ticket.html
+++ b/Airlines/ticket.html
@@ -10,7 +10,7 @@
         <a href="index.html"> Airline Ticket System </a>
         <a href="./airlines.html"> Manage Airlines </a>
         <a href="./destinations.html"> Manage destinations</a>
-        <a href="/book-ticket.html"> Book a Ticket</a>
+        <a href="./ticket.html"> Book a Ticket</a>
     </nav>
     <h2>Book a Ticket</h2>
     <form>
